BILLS-45 fix routing

--- a/infra/nginx/app.conf
+++ b/infra/nginx/app.conf
@@ -13,8 +13,8 @@ http {
         proxy_buffering off;
         proxy_request_buffering off;
 
-        location /api {
-            proxy_pass http://bills-collector:8080;
+        location /api/ {
+            proxy_pass http://bills-collector:8080/;
 
             proxy_read_timeout 5;
 
@@ -23,7 +23,7 @@ http {
             proxy_set_header X-Forwarded-Prefix $proxy_add_x_forwarded_for;
         }
 
-        location /auth {
+        location /auth/ {
             proxy_pass http://keycloak:8081/;
         }
     }
