--- a/bills-collector/src/main/resources/application-docker.yaml
+++ b/bills-collector/src/main/resources/application-docker.yaml
@@ -1,5 +1,5 @@
 spring:
   datasource:
     username: postgres
-    password: postgres
+    password: some-cool-password
     url: jdbc:postgresql://db:5432/bills-collector
