BILLS-45 add keycloak base page routing

--- a/infra/nginx/app.conf
+++ b/infra/nginx/app.conf
@@ -24,7 +24,13 @@ http {
         }
 
         location /auth/ {
-            proxy_pass http://keycloak:8081/;
+            proxy_pass http://bills-keycloak:8080/;
+
+            proxy_read_timeout 5;
+
+            proxy_pass_request_headers on;
+            proxy_set_header Host $host;
+            proxy_set_header X-Forwarded-Prefix $proxy_add_x_forwarded_for;
         }
     }
 }
