--- a/infra/nginx/app.conf
+++ b/infra/nginx/app.conf
@@ -24,7 +24,7 @@ http {
         }
 
         location /auth/ {
-            proxy_pass http://bills-keycloak:8080/;
+            proxy_pass http://bills-keycloak:8080/auth/;
 
             proxy_read_timeout 5;
 
