BILLS-45 set up infrastructure (#2)
* BILLS-45 add Dockerfile

* BILLS-45 add nginx

* BILLS-45 fix routing

* BILLS-45 add basic keycloak

* BILLS-45 set internal network for app database to prevent bots

* BILLS-45 add keycloak base page routing

* BILLS-45 fix keycloak routing

--- a/bills-collector/src/main/resources/application.yaml
+++ b/bills-collector/src/main/resources/application.yaml
@@ -3,7 +3,7 @@ spring:
     name: bills-collector
   datasource:
     username: postgres
-    password: postgres
+    password: some-cool-password
     url: jdbc:postgresql://localhost:5432/bills-collector
     driver-class-name: org.postgresql.Driver
   liquibase:
@@ -13,4 +13,3 @@ server:
   port: 8080
   servlet:
     context-path: /${spring.application.name}
-
