--- a/bills-collector/docker-compose.yaml
+++ b/bills-collector/docker-compose.yaml
@@ -6,10 +6,8 @@ services:
     container_name: bills-collector-db
     environment:
       POSTGRES_USER: "postgres"
-      POSTGRES_PASSWORD: "postgres"
+      POSTGRES_PASSWORD: "some-cool-password"
       POSTGRES_DB: "bills-collector"
-    ports:
-      - "5432:5432"
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -d bills-collector" ]
       interval: 10s
@@ -24,10 +22,41 @@ services:
           memory: 4G
     volumes:
       - bills-collector-db:/var/lib/postgresql/data
-
+    networks:
+      bills-app:
+  app:
+    image: bills:latest
+    container_name: bills-collector
+    environment:
+      SPRING_PROFILES_ACTIVE: docker
+    ports:
+      - "8080:8080"
+    healthcheck:
+      test: [
+        "CMD-SHELL",
+        "wget -T5 -qO- http://localhost:8080/bills-collector/actuator/health | grep UP || exit 1"
+      ]
+      interval: 15s
+      timeout: 10s
+      retries: 3
+      start_period: 15s
+    restart: on-failure
+    deploy:
+      resources:
+        limits:
+          cpus: '1'
+          memory: 4G
+    depends_on:
+      db:
+        condition: service_healthy
+    networks:
+      bills-app:
+      bills-collector:
 volumes:
   bills-collector-db:
 
 networks:
+  bills-app:
   bills-collector:
+    external: true
     driver: bridge
