BILLS-62 add bill entity

--- a/bills-collector/src/main/resources/db/changelog.yaml
+++ b/bills-collector/src/main/resources/db/changelog.yaml
@@ -1,3 +1,5 @@
 databaseChangeLog:
   - include:
       file: db/changelog/add-app-client-changelog.yaml
+  - include:
+      file: db/changelog/add-bill-changelog.yaml
