--- a/bills-collector/src/main/resources/application.yaml
+++ b/bills-collector/src/main/resources/application.yaml
@@ -14,10 +14,15 @@ spring:
     driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: db/changelog.yaml
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true # todo remove in production
 
 logging:
   level:
-    org.springframework.security: TRACE
+    root: info
+
 server:
   port: 8080
   servlet:
