--- a/bills-collector/src/main/resources/application.yaml
+++ b/bills-collector/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
-    show-sql: true # todo remove in production
+    show-sql: true
 
 logging:
   level:
