BILLS-62 add advices, worst code I've ever written

--- a/bills-collector/src/main/resources/application.yaml
+++ b/bills-collector/src/main/resources/application.yaml
@@ -18,6 +18,17 @@ spring:
     hibernate:
       ddl-auto: validate
     show-sql: true
+  ai:
+    retry:
+      max-attempts: 2
+      exclude-on-http-codes:
+        - 429
+      backoff:
+        initial-interval: 1s
+        multiplier: 2
+        max-interval: 3s
+    openai:
+      api-key: put-api-key-here
 
 logging:
   level:
