BILLS-62 add auth + basic business logic (#4)
* BILLS-62 add basic auth

* BILLS-62 add basic auth

* BILLS-62 add client extraction

* BILLS-62 add bill entity

* BILLS-62 add object mapper configuration

* BILLS-62 add controller advice

* BILLS-62 add bills crud

* BILLS-62 add swagger to bill controller

* BILLS-62 add validation starter

* BILLS-62 update swagger schema for bills

* BILLS-62 add exception logging

* BILLS-62 add usage support

* BILLS-62 add advices, worst code I've ever written

* increase access token lifespan

--- a/bills-collector/src/main/resources/application.yaml
+++ b/bills-collector/src/main/resources/application.yaml
@@ -1,6 +1,12 @@
 spring:
   application:
     name: bills-collector
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8081/realms/bills-collector
+          jwk-set-uri: http://localhost:8081/realms/bills-collector/protocol/openid-connect/certs
   datasource:
     username: postgres
     password: some-cool-password
@@ -8,6 +14,25 @@ spring:
     driver-class-name: org.postgresql.Driver
   liquibase:
     change-log: db/changelog.yaml
+  jpa:
+    hibernate:
+      ddl-auto: validate
+    show-sql: true
+  ai:
+    retry:
+      max-attempts: 2
+      exclude-on-http-codes:
+        - 429
+      backoff:
+        initial-interval: 1s
+        multiplier: 2
+        max-interval: 3s
+    openai:
+      api-key: put-api-key-here
+
+logging:
+  level:
+    root: info
 
 server:
   port: 8080
