--- a/bills-collector/Dockerfile
+++ b/bills-collector/Dockerfile
@@ -4,7 +4,7 @@ COPY gradle gradle
 COPY build.gradle.kts .
 COPY settings.gradle.kts .
 
-RUN gradle dependencies || return 0
+RUN gradle dependencies
 
 COPY src src
 RUN gradle bootJar --no-daemon
@@ -15,6 +15,10 @@ RUN addgroup -S spring && adduser -S spring -G spring
 
 USER spring:spring
 WORKDIR /app
+
+ENV LANG ru_RU.UTF-8
+ENV LANGUAGE ru_RU:ru
+ENV LC_ALL ru_RU.UTF-8
 
 COPY --from=build /app/build/libs/*.jar app.jar
 
